// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getImportInsertPosition() should return correct position for commented file 1`] = `
Object {
  "character": 0,
  "line": 1,
}
`;

exports[`getImportInsertPosition() should return correct position for jsdoc comment close 1`] = `
Object {
  "character": 0,
  "line": 1,
}
`;

exports[`getImportInsertPosition() should return correct position for jsdoc comment line 1`] = `
Object {
  "character": 0,
  "line": 1,
}
`;

exports[`getImportInsertPosition() should return correct position for use strict 1`] = `
Object {
  "character": 0,
  "line": 1,
}
`;

exports[`getImportInsertPosition() should return the top position if empty file 1`] = `
Object {
  "character": 0,
  "line": 0,
}
`;

exports[`getImportInsertPosition() should return top position if no editor is specified 1`] = `
Object {
  "character": 0,
  "line": 0,
}
`;
